[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://vcr_pixel_font.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 736.0
margin_bottom = 480.0
color = Color( 0.0588235, 0.0588235, 0.0588235, 0.537255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_won" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.5
margin_top = -34.5
margin_right = 76.5
margin_bottom = -1.5
custom_colors/font_color = Color( 0.745098, 0.745098, 0.745098, 1 )
custom_fonts/font = SubResource( 2 )
text = "Congratulations!
You escaped!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -144.0
margin_right = 2.0
margin_bottom = -123.0
custom_colors/font_color = Color( 0, 0.639216, 0.0313726, 1 )
custom_fonts/font = SubResource( 3 )
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 43.0
margin_top = -144.0
margin_right = 97.0
margin_bottom = -123.0
custom_colors/font_color = Color( 0, 0.639216, 0.0313726, 1 )
custom_fonts/font = SubResource( 3 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathsLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -97.0
margin_top = 12.0
margin_right = -57.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.890196, 0.890196, 0.890196, 1 )
custom_fonts/font = SubResource( 1 )
text = "Deaths: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
